# avant-executive-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  agents.md  alembic.ini  claude.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_canonical_schema.py  0002_runner_constraints_and_data_quality.py  0003_yield_daily_analytics.py  0004_yield_daily_roe_columns.py  0005_alerts_table.py  0006_market_overview_and_risk_fields.py  0007_storage_idempotency.py  0008_portfolio_markets_contract_reset.py  0009_market_share_precision.py  0010_market_view_ratio_precision.py  0011_position_snapshot_collateral_fields.py  0012_position_fixed_yield_cache.py  0013_executive_summary_ops_bucket.py  0014_consumer_holder_behavior.py  0015_consumer_debank_visibility.py  0016_ceo_holder_intelligence.py  0017_holder_supply_coverage.py  0018_holder_supply_strategy_deployed.py  0019_holder_dashboard_reshape.py  0020_holder_wallet_product_daily.py  0021_holder_staked_per_family.py
config/: avant_tokens.yaml  consumer_markets.yaml  consumer_thresholds.yaml  consumer_wallets_avbtcx_0p1.yaml  consumer_wallets_avethx_manual_filtered.yaml  consumer_wallets_avusdx_20k.yaml  consumer_wallets_savbtc_0p1.yaml  consumer_wallets_saveth_manual_filtered.yaml  consumer_wallets_savusd_50k.yaml  holder_exclusions.yaml  holder_protocol_map.yaml  holder_universe.yaml  markets.yaml  pt_fixed_yield_overrides.yaml  risk_thresholds.yaml  wallet_products.yaml
docs/: architecture.md  config.md  dashboard-contracts.md  data-model.md  debank-db-audit.md  dependency-order.md  lessons.md  llm-routing.md  memory.md  tech-stack.md  testing.md  why.md
docs/prd/: README.md  sprint-00-repo-foundation-ci.md  sprint-01-schema-config.md  sprint-02-ingestion-runner-pricing.md  sprint-03-adapter-aave-v3.md  sprint-04-adapters-morpho-euler-dolomite.md  sprint-05-adapters-kamino-zest-silo.md  sprint-06-analytics-yield-fees-roe.md  sprint-07-risk-kink-spread-alerts.md  sprint-08-adapters-markets.md  sprint-08-consumer-analytics.md  sprint-09-api-dashboard-mvp.md  sprint-10-production-hardening.md  sprint-11-wallet-profiles-activity-intelligence.md
docs/prompts/: adapter-template.md  agent-template.md  analytics-template.md  dashboard-template.md
frontend/: next.config.ts  package-lock.json  package.json
src/adapters/: __init__.py
src/analytics/: __init__.py  alerts.py  consumer_capacity_engine.py  executive_summary.py  fee_engine.py  holder_behavior_engine.py  holder_dashboard_engine.py  holder_scorecard_engine.py  market_engine.py  (+7 more)
tests/: conftest.py  test_smoke.py
(+237 files in other folders)
